# fyp

./: README.md  utown.blend  utown.blend1  utown.sdf  utown_10nov.mtl  utown_2nd.mtl  utown_edited.blend  utown_edited.blend1  utown_roadonly_terrain.mtl
devel/: .catkin  local_setup.sh
devel/include/ee4308_turtle/: EE4308MsgMaster.h  EE4308MsgMotion.h
devel/lib/pkgconfig/: ee4308_bringup.pc  ee4308_turtle.pc  hector_gazebo_plugins.pc  karcher_gazebo.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/lib/turtlebot3_slam/: flat_world_imu_node
devel/share/ee4308_bringup/cmake/: ee4308_bringup-msg-paths.cmake  ee4308_bringupConfig.cmake
devel/share/ee4308_turtle/cmake/: ee4308_turtle-msg-extras.cmake  ee4308_turtle-msg-paths.cmake  ee4308_turtleConfig.cmake
devel/share/karcher_gazebo/cmake/: karcher_gazeboConfig.cmake
src/: README.md
src/karcher_urdf/description/: CMakeLists.txt  model.config  package.xml
src/karcher_urdf/description/meshes/: karcher_model.dae
src/karcher_urdf/description/meshes/blender/: karcher_model.blend
src/karcher_urdf/description/urdf/: model.sdf  model.urdf  model_small.urdf
worlds/: utown.dae  utown.world  utown2.dae  utown_3rd.dae  utown_4th.dae  utown_roadonly_terrain.dae  utown_roadonly_terrain_1.dae  utown_roadonly_terrain_2.dae
(+45 files in other folders)
